# bse-rs

./: .gitignore  Cargo.toml  README.md  readme.md
.claude/: CLAUDE.md  PLAN.md
.claude/rules/: agent-and-maintaince.md
deepseek_hints/: deepseek_reader.txt  deepseek_trans.txt  deepseek_writer.txt
src/: api.rs  client.rs  compose.rs  dir_writer.rs  error.rs  fields.rs  ints.rs  lib.rs  lut.rs  manip.rs  misc.rs  prelude.rs  printing.rs  sort.rs
src/cli/: check.rs  common.rs  handlers.rs  main.rs
src/readers/: bsejson.rs  crystal.rs  dalton.rs  demon2k.rs  g94.rs  gbasis.rs  helpers.rs  libmol.rs  mod.rs  nwchem.rs  read.rs  ricdlib.rs  turbomole.rs  veloxchem.rs
src/writers/: bsedebug.rs  bsejson.rs  dalton.rs  demon2k.rs  g94.rs  gamess_uk.rs  libmol.rs  mod.rs  molcas_library.rs  molpro.rs  qcschema.rs  ricdwrap.rs  turbomole.rs  write.rs
tests/: get_basis_json.rs  test_api.rs  test_get_basis.rs  test_notes.rs  test_read_basis.rs  test_truhlar_calendarize.rs
tests/python_ref/: get_basis_fmt.py  get_basis_json.py  get_truhlar_calendarize.py  read_basis_fmt.py
