[package]
name = "bse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
cached = { version = "0.55" }
duplicate = { version = "2.0" }
textwrap = { version = "0.16" }
itertools = { version = "0.14" }
derive_builder = { version = "0.20" }
lazy_static = { version = "1.5" }
phf = { version = "0.12", features = ["macros"] }
regex = { version = "1.11" }

[dev-dependencies]
assert-json-diff = { version = "2.0" }
rstest = { version = "0.25" }

[profile.dev]
opt-level = 2
