[package]
name = "bse"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
cached = { version = "0.55" }
duplicate = { version = "2.0" }
textwrap = { version = "0.16" }
itertools = { version = "0.14" }
derive_builder = { version = "0.20" }
lazy_static = { version = "1.5" }
phf = { version = "0.12", features = ["macros"] }
regex = { version = "1.11" }
libm = { version = "0.2" }
md5 = { version = "0.8" }

[dev-dependencies]
assert-json-diff = { version = "2.0" }
rstest = { version = "0.25" }
toml = { version = "0.8" }
similar = { version = "2.7" }

[profile.dev]
opt-level = 2
